[tool.poetry]
name = "fireconfig"
version = "0.2.2"
description = "Configuration language for Kubernetes manifests"
authors = ["David Morrison <drmorr@appliedcomputing.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cdk8s = "^2"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
