[tool.poetry]
name = "fireconfig"
version = "0.2.2"
description = "Configuration language for Kubernetes manifests"
authors = ["David Morrison <drmorr@appliedcomputing.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3"
cdk8s = "^2"
deepdiff = "^6.7.1"
pyyaml = "^6.0.1"
simplejson = "^3.19.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
flake8 = "*"
types-simplejson = "^3.19.0.2"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
