[tool.poetry]
name = "fireconfig"
version = "0.5.1"
description = "Configuration language for Kubernetes manifests"
authors = ["David Morrison <drmorr@appliedcomputing.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cdk8s = "^2.68"
deepdiff = "^6.7.1"
pyyaml = "^6.0.1"
simplejson = "^3.19.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
flake8 = "*"
types-simplejson = "^3.19.0.2"
types-pyyaml = "^6.0.12.12"
pytest = "^7.4.4"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
